--- a/server/public/pages/template.ejs
+++ b/server/public/pages/template.ejs
@@ -1,8 +1,10 @@
 <html>
 <head>
 	<title>oooLink</title>
+	<link href="/dist/main.css" rel="stylesheet"/>
 </head>
 <body>
+<% include panel.ejs %>
 <%- body %>
 </body>
 </html>
