--- a/server/public/css/vue/app.css
+++ b/server/public/css/vue/app.css
@@ -1,4 +1,9 @@
-#app{
-	width: 100%;
-	padding-top: 20px;
+#panel{
+    float: left;
+    height: 100%;
+    position: fixed;
+}
+
+#container{
+    margin-left: 150px;
 }
